# iar-vscode-cmake-fedora

./: CMakeLists.txt  README.md  main.c
debugger/: STM32F407.svd
